--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+
+
 .App {
   text-align: center;
 }
@@ -35,4 +37,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+/* General Page Spacing */
+.page-container {
+  padding: 40px; /* Adds space around the page content */
 }
